Bug 97908 - Right ALT key not functional for key combinations
Summary: Right ALT key not functional for key combinations
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.0.4.2 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
: 96716 97370 98167 98536 98553 100185 100622 100859 105925 (view as bug list)
Depends on:
Blocks: Shortcuts-AltGR
  Show dependency treegraph
 
Reported: 2016-02-16 16:44 UTC by Jan Zizka
Modified: 2018-07-20 06:57 UTC (History)
19 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Zizka 2016-02-16 16:44:24 UTC
In Writer, the keyboard "Czech Programmers" (provided by MS Windows operating system) does not work at all. However, it works quite well in Impress, Calc, Math, and Draw. I tried it using 3 computers with MS Windows 8.1, 64-bit (both SW and HW). The keyboard is supposed to generate Czech letters as ě, š, č, ř, ž, ý, á, í, é, ú, ů, Ě,..., Ů when using Ctrl+Alt+key; for example, Ctrl+Alt+2 generates ě, and so like (I wrote those letters here using just that keybord). Why it produces nothing in Writer unlike the rest of LibreOffice?
Comment 1 raal 2016-02-16 20:32:19 UTC
I can confirm with Version: 5.2.0.0.alpha0+
Build ID: 1ec96eab842c6b08edd88e7ef3fe6aeb4bcf9ff7
CPU Threads: 1; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-02-10_07:11:13
Locale: cs-CZ (cs_CZ)

works correct with  4.2.8.2, regression
Comment 2 raal 2016-02-17 10:09:43 UTC
This seems to have begun at the below commit.
Adding Cc: to Juergen Funk; Could you possibly take a look at this one? Thanks
 2a3691801f605674bb3e0b5996c12f869da32009 is the first bad commit
commit 2a3691801f605674bb3e0b5996c12f869da32009
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Fri Nov 13 18:19:20 2015 -0800

    source 3ac9942c624cb627c8b09122498b45b05cf455f6

    source 3ac9942c624cb627c8b09122498b45b05cf455f6

:040000 040000 692e901c8bad3d84a49bf2776b14158cec8c2195 16a62145b6326a7fcc8e483ef7b9a316ab29b617 M      instdir

author	Juergen Funk <juergen.funk_ml@cib.de>	2015-11-12 09:50:59 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2015-11-12 14:14:32 (GMT)
commit 3ac9942c624cb627c8b09122498b45b05cf455f6 (patch)
tree 95dd8dcaecc1485ea77b24bb91d57f377e8c8e2c
parent 0b3fbf8299c51767689b4e7656bbf4c331450b98 (diff)
tdf#95761 All Hotkeys with CTRL+ALT+ not worked
Comment 3 Juergen Funk 2016-02-17 12:00:53 UTC
Hi raal,

can you make this test: Use the "left Alt-Key" and NOT the right Alt-Key,  and when it works we need a dependency of the language for my patch.

But i not understand why only in writer, this fix, i mean, was for all?!
Comment 4 raal 2016-02-18 14:28:16 UTC
Right Ctrl + Right Alt works.
Left Ctrl + Left Alt doesn't work.
Comment 5 Juergen Funk 2016-02-22 09:45:32 UTC
Hi raal,

i have made this fix https://gerrit.libreoffice.org/22611

can you test this, i have tested with German an US

When it works, i would like to make this patch under LO 5.0 and 5.1

Thanks
Juergen
Comment 6 Juergen Funk 2016-02-25 10:21:05 UTC
Hi raal,

have you tested my patch?
Comment 7 Buovjaga 2016-03-09 15:31:00 UTC
*** Bug 98553 has been marked as a duplicate of this bug. ***
Comment 8 Buovjaga 2016-03-09 15:31:15 UTC
*** Bug 98167 has been marked as a duplicate of this bug. ***
Comment 9 Buovjaga 2016-03-09 17:48:31 UTC
*** Bug 98553 has been marked as a duplicate of this bug. ***
Comment 10 Buovjaga 2016-03-09 18:33:13 UTC Comment hidden (obsolete)
Comment 11 FCqzsFMrsieN3hpkERKg 2016-03-09 18:50:13 UTC
Buovjaga says the following details are pertinent here.

On a U.S. keyboard layout, right ALT is ignored when pressed with any other key.

- Affected programs: Calc, Draw, Impress, Math, and Writer.
- Unaffected programs: Base and Start Screen.

Observations:

- Right ALT + F4 does not close affected programs. 
- Typing in Writer is possible with the right ALT key depressed, but not with the left ALT key.
- Pressing and releasing right ALT alone activates menu focus in affected programs, which means LibreOffice at least recognizes the key.

Latest unaffected version tested: 
LibreOfficeDev_5.1.0.0.alpha1_Win_x64.msi

Earliest affected version tested: 
LibreOfficeDev_5.1.0.0.beta1-buildfix1_Win_x64.msi

Latest affected version tested:
LibreOffice_5.1.1.3_Win_x64.msi

Buovjaga also notes that

> Your timeline matches the offending commit by Jürgen. The commit was not
> only about Writer: https://gerrit.libreoffice.org/#/c/19923/
> 
> https://wiki.documentfoundation.org/ReleasePlan/5.1
> 
> Unaffected Alpha1 	Week 42 , Oct 12, 2015 - Oct 18, 2015
> Jürgen's commit merged Fri Nov 13 18:19:20 2015
> Affected Beta1  	Week 48 , Nov 23, 2015 - Nov 29, 2015

I've changed the earliest affected version here to 5.1.0.0.beta1. I hope this specific information helps.
Comment 12 Buovjaga 2016-03-09 19:56:50 UTC
*** Bug 98536 has been marked as a duplicate of this bug. ***
Comment 13 raal 2016-03-16 13:34:03 UTC
*** Bug 97370 has been marked as a duplicate of this bug. ***
Comment 14 Emanuel Hoogeveen [:ehoogeveen] 2016-03-20 13:49:35 UTC
Does right alt mean something different on these keyboard layouts? FWIW, in bug 97370 the problem is that Ctrl+Alt (left Alt) no longer works, but AltGr (the right Alt key on the US keyboard layout) can still be used as a workaround.
Comment 15 Björn Michaelsen 2016-04-16 16:12:44 UTC
*** Bug 96716 has been marked as a duplicate of this bug. ***
Comment 16 Buovjaga 2016-06-09 07:38:43 UTC
*** Bug 100185 has been marked as a duplicate of this bug. ***
Comment 17 Michail Pappas 2016-06-09 09:11:37 UTC
(In reply to Emanuel Hoogeveen [:ehoogeveen] from comment #14)
> Does right alt mean something different on these keyboard layouts? FWIW, in
> bug 97370 the problem is that Ctrl+Alt (left Alt) no longer works, but AltGr
> (the right Alt key on the US keyboard layout) can still be used as a
> workaround.

Exactly same observation with 5.0.2.5, using a Greek keyboard: AltGr+E produces the Euro symbol, whereas Ctrl+LeftAlt+E does not (whereas it did in all 4.x versions IIRC).
Comment 18 Michail Pappas 2016-11-15 06:24:42 UTC Comment hidden (no-value)
Comment 19 Phil Krylov 2017-03-10 20:01:52 UTC
The solution is evident, revert 3ac9942c624cb627c8b09122498b45b05cf455f6 which only broke things and find another solution for the problem which 3ac9942c624cb627c8b09122498b45b05cf455f6 tried to fix.
Comment 20 Buovjaga 2017-04-17 16:24:36 UTC
*** Bug 100859 has been marked as a duplicate of this bug. ***
Comment 21 Xisco Faulí 2017-09-13 18:14:30 UTC
*** Bug 100622 has been marked as a duplicate of this bug. ***
Comment 22 Buovjaga 2017-11-19 15:07:25 UTC
(In reply to Phil Krylov from comment #19)
> The solution is evident, revert 3ac9942c624cb627c8b09122498b45b05cf455f6
> which only broke things and find another solution for the problem which
> 3ac9942c624cb627c8b09122498b45b05cf455f6 tried to fix.

It was reverted with https://cgit.freedesktop.org/libreoffice/core/commit/?id=f53b3b547b04dc112076d8323b5b24ae178d6260
Comment 23 Aron Budea 2018-02-05 01:31:36 UTC
Yes, the mentioned commit has been reverted, the issue is gone in 6.0.0.3, let's mark this fixed.
Comment 24 Aron Budea 2018-02-05 01:35:41 UTC
*** Bug 105925 has been marked as a duplicate of this bug. ***
Comment 25 kytin2000 2018-07-20 06:57:46 UTC
Hi,
problem persist in version 6.0.6.1 (x64) - Writer, Calc, Impress.
Locale: cs-CZ (cs_CZ)
Possible solution: change Ctrl+Alt+Key to another key combination in default.

Thanks