tdf#97908 Writer: The keyboard "Czech" in MS Windows does not work.

The problem is this patch 3ac9942c624cb627c8b09122498b45b05cf455f6 it
solve the Hot-Key-Handling under German-Keyboard.

This fix improve the patch with independency of the German-Keyboard

Change-Id: I34a1a8585331128b8cfdd80d3b4d185f185d3e02